--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico.jpg">
 
 		<title>ASHVARTH ETTAM</title>
 		<meta charset="utf-8" />
