--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 -->
 <html>
 	<head>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	</head>	
-	
-	<head>
+		<%= favicon_tag 'images/favicon.ico' %>
+			
 		<title>ASHVARTH ETTAM</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
