--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<%= favicon_tag 'images/favicon.ico' %>
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 			
 		<title>ASHVARTH ETTAM</title>
 		<meta charset="utf-8" />
