--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>ASHVARTH</strong>, A POTRAITURE</a> PHOTOGRAPHER<br />
+								<h2 class="alt">Hi! I'm <strong>ASHVARTH</strong>, A PORTRAITURE</a> PHOTOGRAPHER<br />
 								& FRONT END WEB DEVELOPER</a>.</h2>
 								<p>THIS IS MY PERSONAL WEBSITE<br />
 								LOVE! CREATE!! INSPIRE!!!</p>
